--- a/app/globals.css
+++ b/app/globals.css
@@ -3,10 +3,10 @@
 
 @layer base {
   :root {
-    --foreground: #2B3B33;
+    --foreground: #93cfb1;
   }
 
   body {
-    color: hsl(var(--foreground));
+    color: #2E3833;
   }
 }
